--- a/src/components/MapInfo/MapInfo.scss
+++ b/src/components/MapInfo/MapInfo.scss
@@ -67,6 +67,7 @@
 
         .info{
             padding-inline: 2rem 4rem;
+            height: 100px;
             
             &:not(:last-child){
                 border-right: .5px solid #555;
@@ -81,9 +82,9 @@
             }
 
             p{
-                font-size: 1.5rem;
+                font-size: 1.3rem;
                 font-weight: 500;
-                width: 150px;
+                width: 200px;
             }
         }
     }
