--- a/src/components/MapInfo/MapInfo.scss
+++ b/src/components/MapInfo/MapInfo.scss
@@ -68,7 +68,7 @@
             }
 
             @include Mobile{
-                padding: .8rem 1.2rem;
+                padding: 1rem 1.2rem;
             }
         }
     }
